fixed alignment on smalled screen

--- a/app.css
+++ b/app.css
@@ -68,8 +68,7 @@ form {
 
 .formDiv {
   display: flex;
-  flex-flow: row wrap;
-
+  flex-flow: column wrap;
 }
 
 label {
